<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".AboutActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="59dp"
                android:layout_height="63dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dip"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/sail"
                android:text="@string/about"
                android:textColor="#0D47A1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_horizontal"
                android:text="@string/info" />

            <TextView
                android:id="@+id/info2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_horizontal"
                android:text="@string/info1" />

            <TextView
                android:id="@+id/info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_horizontal"
                android:text="@string/info3" />

            <TextView
                android:id="@+id/info4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:gravity="center_horizontal"
                android:text="@string/info4"
                android:textSize="14dip" />

            <TextView
                android:id="@+id/member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                android:layout_marginRight="16dip"
                android:fontFamily="@font/sail"
                android:gravity="center_horizontal"
                android:text="@string/member"
                android:textColor="#0D47A1"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/kimwidad"
                android:layout_width="81dp"
                android:layout_height="94dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-5dip"
                app:srcCompat="@drawable/kimm" />

            <TextView
                android:id="@+id/mobileDev1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/hamer"
                android:text="@string/job"
                android:textColor="#0D47A1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nameWidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/nameWidad" />

            <TextView
                android:id="@+id/stdIdWid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-3dp"
                android:text="@string/studentCardWid" />

            <TextView
                android:id="@+id/grp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-6dp"
                android:text="@string/sem5" />

            <ImageView
                android:id="@+id/pijah"
                android:layout_width="93dp"
                android:layout_height="104dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-10dip"
                app:srcCompat="@drawable/pijah" />

            <TextView
                android:id="@+id/mobileDev2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/hamer"
                android:text="@string/job"
                android:textColor="#0D47A1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/namePijah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:text="@string/namePijah" />

            <TextView
                android:id="@+id/stdIdPij"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-4dp"
                android:text="@string/studentCardPij" />

            <TextView
                android:id="@+id/grp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sem5" />

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dip"
                android:layout_marginBottom="16dip"
                android:fontFamily="@font/hamer"
                android:shadowColor="#FDFFFFFF"
                android:text="@string/link"
                android:textColor="#0D47A1"
                android:textColorLink="#0D47A1"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-10dip"
                android:layout_marginBottom="16dip"
                android:fontFamily="@font/hamer"
                android:text="@string/copyright"
                android:textColor="#0D47A1"
                android:textStyle="bold" />




        </LinearLayout>
    </ScrollView>
</ScrollView>