<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="59dp"
                android:layout_height="63dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dip"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/sail"
                android:text="@string/Let_calculate"
                android:textColor="#3F51B5"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/zakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:text="@string/yourzakat"
                android:textColor="#0D47A1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/calcWgt"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dip"
                android:layout_marginRight="16dip"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/typeGold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dip"
                android:layout_marginTop="2dip"
                android:text="@string/type"
                android:textColor="#050505"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="-15dip"
                android:layout_marginRight="16dip"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/keep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="16dip"
                    android:layout_marginRight="16dip"
                    android:minHeight="48dp"
                    android:padding="5dp"
                    android:text="@string/keep"
                    android:textColor="#0C0C0C"
                    android:textSize="16sp"
                    android:theme="@style/RadioButtonStyle" />

                <RadioButton
                    android:id="@+id/wear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="16dip"
                    android:layout_marginTop="2dip"
                    android:layout_marginRight="16dip"
                    android:minHeight="48dp"
                    android:padding="5dp"
                    android:text="@string/wear"
                    android:textColor="#0B0909"
                    android:textSize="16sp"
                    android:theme="@style/RadioButtonStyle" />

            </RadioGroup>

            <EditText
                android:id="@+id/calcCurrentGold"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="-15dip"
                android:layout_marginRight="16dip"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/current_gold"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

            <Button
                android:id="@+id/calcButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                android:layout_marginRight="16dip"
                android:background="@drawable/button_bg"
                android:text="@string/calculate"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                android:layout_marginRight="14dip"
                android:includeFontPadding="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/output2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="16dip"
                android:includeFontPadding="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/output3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="16dip"
                android:includeFontPadding="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/resButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                android:layout_marginRight="16dip"
                android:layout_marginBottom="16dip"
                android:background="@drawable/button_bg"
                android:text="@string/reset"
                android:textSize="16sp"
                />


        </LinearLayout>
    </ScrollView>
</ScrollView>